# fabianodencom

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tailwind.config.js
backend/: Cargo.toml  Dockerfile  Dockerfile.actix
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: timelog.md
frontend/: Cargo.toml  Dockerfile  Dockerfile.yew  Trunk.toml  index.html
frontend/src/: main.rs  router.rs
frontend/src/components/: base.rs  navbar.rs  title.rs
frontend/src/pages/: home.rs  websites.rs
frontend/src/static/style/: output.css
src/: main.rs  pages.rs
src/components/: base.rs  navbar.rs
src/pages/: home.rs  websites.rs
