[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
common = {path="../common"}
actix-web-lab = "0.18.9"
# actix-files = "0.6.2" https://github.com/vascokk/fullstack-rust
