[package]
name = "fabianoden-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features = ["csr", "hydration"] }
yew-router = {version="0.17.0"}
yew-hooks = "0.2.0"
common = {path="../common"}
wasm-logger = "0.2.0"